--- a/index.html
+++ b/index.html
@@ -9,9 +9,75 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <section class="parallax"><h2>Section 1</h2></section>
-    <section><h2>Section 2</h2></section>
-    <section class="parallax"><h2>Section 3</h2></section>
-    <section><h2>Section 4</h2></section>
+    <div class="wrapper">
+      <section class="parallax-group hero">
+        <!-- <div class="parallax-layer parallax-layer--1">
+          <p>First layer</p>
+        </div> -->
+
+        <div class="parallax-layer parallax-layer--2">
+          <h1>Parallax effect CSS only</h1>
+        </div>
+      </section>
+      <section class="content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+        </p>
+      </section>
+    </div>
   </body>
 </html>
