added third parallax fixed

--- a/index.html
+++ b/index.html
@@ -10,13 +10,134 @@
   </head>
   <body>
     <div class="wrapper">
-      <section class="parallax-group hero">
-        <!-- <div class="parallax-layer parallax-layer--1">
-          <p>First layer</p>
-        </div> -->
+      <section class="parallax-group parallax-group-large">
+        <div class="parallax-layer parallax-layer--1">
+          <h2>First layer</h2>
+        </div>
 
         <div class="parallax-layer parallax-layer--2">
-          <h1>Parallax effect CSS only</h1>
+          <h2>Parallax effect CSS only</h2>
+        </div>
+      </section>
+      <section class="content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+        </p>
+      </section>
+      <section class="parallax-group parallax-group-small">
+        <div class="parallax-layer parallax-layer--3">
+          <h2>Third layer</h2>
         </div>
       </section>
       <section class="content">
