--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="parallax-layer parallax-layer--2">
-          <h2>Parallax effect CSS only</h2>
+          <h2>Second layer</h2>
         </div>
       </section>
       <section class="content">
@@ -198,6 +198,70 @@
           esse quia inventore a totam blanditiis alias excepturi mollitia
           molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
         </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          aliquid, laborum deserunt ut molestias placeat veniam facilis iste
+          inventore et quis fugit non incidunt, harum distinctio labore
+          molestiae debitis. Ullam quidem est accusamus ad nisi! Inventore quae
+          provident dolorum qui dolores sed accusantium quidem suscipit, ratione
+          maiores voluptatibus tempora enim atque corrupti nemo, molestias
+          voluptatem ipsum quibusdam, fugiat sit autem aliquid ex? Sequi eos cum
+          quos dignissimos sapiente quae impedit, dicta consectetur quis
+          veritatis! Cum distinctio neque nisi commodi, sint incidunt et est
+          esse quia inventore a totam blanditiis alias excepturi mollitia
+          molestiae quaerat. Voluptatem illo iure quisquam necessitatibus nisi?
+        </p>
+      </section>
+      <section class="parallax-group parallax-group-large">
+        <div class="parallax-layer parallax-layer--4">
+          <h2>Fourth layer</h2>
+        </div>
+      </section>
+      
       </section>
     </div>
   </body>
